--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,11 @@ environment:
 
 dependencies:
   open_iconic_flutter: ">=0.3.0 <0.4.0"
-  video_player: ">=0.7.0 <0.11.0"
+  video_player:
+    git:
+      url: 'https://github.com/tvip/flutter-plugins.git'
+      ref: videoplayer_http_headers #branch or commit hash here
+      path: packages/video_player
   screen: ">=0.0.4 <0.1.0"
   flutter:
     sdk: flutter
